bad/new_array_invalid_size_type_array.example_compiler_output
ERROR
[1mbad/new_array_invalid_size_type_array.lat:3:20: [1;31merror: [0;1marray size has to be of type `int`, not `int[]`[m
	int[] x = new int[new int[4]];
	                  [1;32m^[m
